# torch-jet

./: .conda_env.yml  .gitignore  .readthedocs.yaml  README.md  black.toml  changelog.md  makefile  mkdocs.yaml  pyproject.toml
.github/workflows/: doc.yaml  latex.yaml  lint-black.yaml  lint-darglint.yaml  lint-flake8.yaml  lint-format.yaml  lint-isort.yaml  lint-pydocstyle.yaml  lint-ruff.yaml  test.yaml
c_code/: makefile  nonl_exam.cpp  nonl_exam1.cpp  referenzwerte.ods  simp_exam.cpp
docs/: api.md  available_operators.md  collapsed_taylor_mode.md  develop.md
docs/examples/: 01_taylor_mode.py  02_laplacians.py  02_pde_operators.py  03_application_pinns.py  03_from_torch_to_torch_jet.py  04_limitations.py  05_collapsing_taylor_mode.py  06_how_to_create_operator.py  07_multivariate_operators.py
example_TTC/: jax_TTC.ipynb  jax_TTC.py
ideas/: main.tex
jet/: __init__.py  bilaplacian.py  collapsed.py  jet_interpreter.py  jet_transformer.py  laplacian.py  operations.py  rules.py  signature_parser.py  simplify.py  test.py  tracing.py  ttc_coefficients.py  utils.py  vmap.py  weighted_laplacian.py
jet/exp/: utils.py
paper/: jet  main.tex  references.bib
paper/figures/: sin_2jet_0.tex  sin_2jet_1.tex  sin_2jet_2.tex  sin_2jet_3.tex  sin_2jet_4.tex  sin_2jet_5.tex  sin_2jet_6.tex  sin_2jet_7.tex  sin_2jet_8.tex  sin_2jet_9.tex  sin_2jet_after.tex  sin_2jet_before.tex  sin_2jet_pull_sum.tex  sin_2jet_push_replicate.tex  taylor_signature.tex  torch_benchmark.tex  torch_benchmark_compiled.tex  ttc_bilaplacian.tex  vanilla_taylor_not_enough.tex  visual_abstract.tex
paper/preamble/: custom.tex  goodfellow.tex  metadata.tex
paper/sections/: acknowledgements.tex  appendix_connections.tex  appendix_jax.tex  appendix_linearity_for_taylor.tex  appendix_numerical_analysis.tex  appendix_torch.tex  appendix_ttc.tex  background.tex  checklist.tex  conclusion.tex  experiments.tex  faa_di_bruno.tex  graph_simplifications.tex  introduction.tex  method.tex
poster/: main.tex
slides/: main.tex  taylor_signature.tex  ttc_bilaplacian.tex  vanilla_taylor_not_enough2.tex
test/: test___init__.py  test_bilaplacian.py  test_collapsed.py  test_laplacian.py  test_nesting.py  test_rules.py  test_signature_parser.py  test_simplification_rules.py  test_simplify.py  test_tracing.py  test_utils.py  test_vmap.py  test_weighted_laplacian.py  utils.py
(+581 files in other folders)
