# This file is used to configure the project.
# Read more about the various options under:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# MAIN LIBRARY
[project]
name = "jet"
authors = [
    { name = "Felix Dangel" },
]
urls = { Repository = "https://github.com/f-dangel/torch-jet" }
description = "Taylor-mode automatic differentiation for PyTorch"
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8; variant=GFM" }
license = { text = "MIT" }
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
# Dependencies of the project:
dependencies = [
    "torch",
    "einops",
    "numpy",
    "scipy",
]

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
requires-python = ">=3.12"

[project.optional-dependencies]
# Dependencies needed to run the experiments (semicolon/line-separated)
exp = [
    "memory_profiler",
    "pandas",
    "matplotlib",
    "tueplots",
    "pydot", # visualizing torch.fx compute graphs
]
# Dependencies needed to run the tests (semicolon/line-separated).
test = [
    "coveralls",
    "pytest",
    "pytest-cov",
    "pytest-optional-tests",
]

# Dependencies needed for linting (semicolon/line-separated)
lint = [
    "black",
    "flake8",
    "mccabe",
    "pycodestyle",
    "pyflakes",
    "pep8-naming",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-tidy-imports",
    "darglint",
    "pydocstyle",
    "isort",
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pydocstyle]
convention = "google"
match = '.*\.py'
# exclude directories, see
# https://github.com/PyCQA/pydocstyle/issues/363#issuecomment-625563088
match_dir = '^(?!(test|.git)).*'

[tool.setuptools]
packages = ["jet"]